fix og:image and twitter:image metadata

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <meta property="og:description" content="The website for Matikane Tannhäuser, the cutest Uma Musume out there."/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="https://www.tannhauser.moe/"/>
-        <meta property="og:image" content="https://www.tannhauser.moe//img/TannhauserHappy.png"/>
+        <meta property="og:image" content="https://www.tannhauser.moe/img/TannhauserHappy.png"/>
         <meta name="twitter:card" content="summary"/>
         <meta name="twitter:title" content="Ei Ei Mun! - tannhauser.moe"/>
         <meta name="twitter:description" content="The website for Matikane Tannhäuser, the cutest Uma Musume out there."/>
-        <meta name="twitter:image" content="https://www.tannhauser.moe//img/TannhauserHappy.png"/>
+        <meta name="twitter:image" content="https://www.tannhauser.moe/img/TannhauserHappy.png"/>
         <link rel="stylesheet" href="style.css" type="text/css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
