Updated videos to be mine

--- a/index.html
+++ b/index.html
@@ -81,15 +81,14 @@
             var firstVisibleVideo = true;
 
             var videoIdMinViews = {
-                "50VY6RKXPPM": 200000,
-                "luvRLy9bVo0": 400000,
-                "lYwAR2g9e3w": 600000,
-                "YV3sckHUGQg": 800000,
-                "M1KAsBYweH8": 1000000,
-                "Zv25uERcqbI": 1200000,
-                "hbhGliMgytM": 1400000
-            }
-            
+                "cl6_5OqqTeA": 250000,
+                "sGvUskSGjFo": 500000,
+                "eYdFB3sLo5w": 750000,
+                "iMzUHmmtQwE": 1000000,
+                "53ewYaWqGq8": 1250000,
+                "D7oxIKHmQQI": 1500000,
+                "m93Ee43lfeY": 2000000
+            }            
             //#endregion
 
             //#region Autostart
