Updated some video errors

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div id="footer">
             <p>If you have any suggestions in terms of features/images (including source), don't hesitate to contact me on Discord at <strong>Kawaii Shadowii#4571</strong></p>
-        </div>        
+        </div>
         <script type="text/javascript">
             //#region Global Variables
             var audioList = [
@@ -81,14 +81,14 @@
             var firstVisibleVideo = true;
 
             var videoIdMinViews = {
-                "cl6_5OqqTeA": 250000,
+                "bVzgjJaer3c": 250000,
                 "sGvUskSGjFo": 500000,
                 "eYdFB3sLo5w": 750000,
                 "iMzUHmmtQwE": 1000000,
                 "53ewYaWqGq8": 1250000,
-                "D7oxIKHmQQI": 1500000,
-                "m93Ee43lfeY": 2000000
-            }            
+                "jCW3VvZTtNY": 1500000,
+                "ckgzzAenSlY": 2000000
+            }
             //#endregion
 
             //#region Autostart
