--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div id="footer">
-            <p>If you have any suggestions in terms of features/images (including source), don't hesitate to contact me on Discord at <strong>Kawaii Shadowii#4571</strong></p>
+            <p>If you have any suggestions in terms of features/images <span class="no-break">(including source),</span> don't hesitate to contact me on Discord at <strong><span class="no-break">Kawaii Shadowii#4571</span></strong> or on Twitter at <a href="https://twitter.com/Kawaii_Shadowii" target="_blank"><strong>@Kawaii_Shadowii</strong></a></p>
         </div>
         <script type="text/javascript">
             //#region Global Variables
