Discord user name change and added a few images + removed dead twitter links

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img id="trainer-profile" loading="lazy" src="img/TrainerProfile.webp" alt="">
             <div id="footer-text">
                 <p id="footer-header-text">If you have any suggestions in terms of features/images <span class="no-break">(including source),</span> don't hesitate to contact me here:</p>
-                <p><iconify-icon icon="ic:baseline-discord" id="discord-footer-icon" class="footer-icon"></iconify-icon><span class="footer-icon-text">Kawaii Shadowii#4571</span></p>
+                <p><iconify-icon icon="ic:baseline-discord" id="discord-footer-icon" class="footer-icon"></iconify-icon><span class="footer-icon-text">kawaii_shadowii</span></p>
                 <p><a href="https://twitter.com/Kawaii_Shadowii" target="_blank"><iconify-icon icon="mdi:twitter" id="twitter-footer-icon" class="footer-icon"></iconify-icon><span class="footer-icon-text">@Kawaii_Shadowii</span></a></p>
                 <p><a href="https://github.com/KawaiiShadowii" target="_blank"><iconify-icon icon="mdi:github" id="github-footer-icon" class="footer-icon"></iconify-icon><span class="footer-icon-text">KawaiiShadowii</span></a></p>
                 <p id="footer-repository-text">You can check out the GitHub repository here:</p>
