--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 let minutes = Math.floor((input_seconds % (60 * 60)) / 60);
                 let seconds = Math.floor(input_seconds % 60);
 
-                return `${days} day${days === 1 ? '' : 's'}, ${hours} hour${hours === 1 ? '' : 's'}, ${minutes} minute${minutes === 1 ? '' : 's'}, ${seconds} second${seconds === 1 ? '' : 's'}`;
+                return `${days} day${days === 1 ? '' : 's'}, ${hours} hour${hours === 1 ? '' : 's'}, ${minutes} minute${minutes === 1 ? '' : 's'}, ${seconds} second${seconds === 1 ? '' : 's'} (estimated)`;
             }
             //#endregion
 
