--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
             </div>
             <div id="video-container">
                 <h2 id="video-title">Machitan Concerts</h2>
+                <p id="video-subtitle">(Click on the image to view the video.)</p>
                 <hr>
                 <div id="video-item-container"></div>
             </div>
             <h2 id="gallery-title">Machitan Photo Gallery</h2>
+            <p id="gallery-subtitle">(Click on the image to view the source.)</p>
             <hr>
             <div id="grid">
                 <noscript>Your browser does not support JavaScript or JavaScript has been disabled.<br>This website relies on JavaScript, so please enable it or use another browser.</noscript>
